# bank-agent

./: .gitignore  README.md  pyproject.toml
data/: accounts.json
docs/: agent_blueprint.md
src/bank_agent/: __init__.py  agent.py  cli.py  core_banking.py
tests/: test_agent.py
